--- a/customer-sentiment/src/app/response/response.scss
+++ b/customer-sentiment/src/app/response/response.scss
@@ -55,6 +55,10 @@
   color: var(--clr-neutral-50);
 }
 
+.summary {
+  margin-block-end: var(--space-4x);
+}
+
 .message {
   max-inline-size: 70%;
   padding-block: var(--space-3x);
@@ -74,7 +78,7 @@
 }
 
 .incoming {
-  background-color: var(--clr-neutral-10);
+  background-color: var(--clr-neutral-20);
 
   .message-time {
     color: var(--clr-neutral-70);
